# CAPRAE

./: .gitignore  README.md  README.root.md  pyproject.toml  requirements-cli.txt  requirements-full.txt
docs/: ANSWERS.md  REPORT.md
leadgen/: __init__.py  api.py  cli.py  enrich.py  models.py  scoring.py  scraper.py  ui.py  utils.py
scripts/: run.sh
